syntax = "proto3";

package registration.v1;

import "buf/validate/validate.proto";
import "auth/v1/common.proto";

message SignUpRequest {
  string email = 1 [(buf.validate.field).string.email = true];
  string password = 2;
}

message SignUpResponse {
  string user_id = 1;
  auth.v1.Tokens tokens = 2;
}

service AccountService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
}
